syntax = "proto3";
package modules;

option go_package = "./proto";

enum ModuleType {
  SIMPLE_WIRES = 0;
  PASSWORD = 1;
}

enum BombFace {
  FRONT = 0;
  BACK = 1;
}

message ModulePosition {
  BombFace face = 1;
  int32 row = 2; // 0-indexed
  int32 col = 3; // 0-indexed
}

message ModuleState {
  string module_id = 1;
  ModuleType type = 2;
  ModulePosition position = 3;
  bool solved = 4;
}

message CutWireInput {
  int32 wire_index = 1;
}

message SubmitPasswordInput {
  string password = 1;
}