syntax = "proto3";
package player;

import "proto/modules.proto";

option go_package = "./proto";

message JoinRequest {
  string name = 1;
}

message PlayerInput {
  string player_id = 1;
  string module_id = 2;
  oneof input {
    modules.CutWireInput cut_wire = 3;
    modules.SubmitPasswordInput submit_password = 4;
  }
}